[SOUP] The initiating page is lost after a redirection https://bugs.webkit.org/show_bug.cgi?id=126293

Reviewed by Martin Robinson.

The initiating page id is attached to the initial soup request
object, but not to the one created after a redirection.

* platform/network/soup/ResourceHandleSoup.cpp:
(WebCore::createSoupRequestAndMessageForHandle): Call
setSoupRequestInitiatingPageIDFromNetworkingContext() here if the
soup request is created successfully.
(WebCore::ResourceHandle::start): Remove the call to
setSoupRequestInitiatingPageIDFromNetworkingContext().

Canonical link: https://commits.webkit.org/144259@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@161178 268f45cc-cd09-0410-ab3c-d52691b4dbfc